themes/startwords/assets/scss/issue/_summary.scss
/* issue summary/preview styles */

// default display on issue list page
.issue-summary {
    color: $black;
    font-size: rem(16px);
    position: relative;

    .theme { color: $transparent-grey; }

    .inverted & {
        color: $off-white;

        .theme, .theme a { color: $light-purple; }
    }

    a:not(.more) { text-decoration: none; }

    .number,
    .theme {
        display: block;
        text-transform: uppercase;
    }

    .theme {
        font-size: rem(20px);
        margin: rem(5px) 0 0;  
        line-height: normal;
    }

    .number {
        margin-left: 0;
        font-weight: 300;
    }

    .summary {
        margin: rem(10px) 0 0;
        line-height: rem(25px);
    }
}

// special display on issue list page
body.issue-list .issue-summary
{
    // offset margin
    .pubdate,
    .number {
        margin: 0 0 0 rem(40px);
    }

    // bold issue number
    .number {
        font-weight: bold;
    }

    // big theme
    .theme {
        font-weight: 900;
        font-size: rem(60px);
        word-wrap: break-word;
        margin: 0;
        color: $transparent-grey;
        line-height: rem(50px);
    }
}

